Fixed invisible favourite links in SCAPE layout

--- a/public/stylesheets/scape.css
+++ b/public/stylesheets/scape.css
@@ -1,6 +1,5 @@
 /* Supplementary stylesheet for the template layout. Requires main myExperiment stylesheet. */
 
-/* Changes the colour of the sidebar/searchbar (normally blue): */
 #myexp_searchbar, #myexp_sidebar, .pagination a, .tabnav li a:hover, .tabnav li#selected_tabnav a  {
     background-color: #3999b9;
 }
@@ -18,11 +17,15 @@
     border-color: #5aaac5;
 }
 
-.navbar a {
+#site_info_links a {
     color: white;
 }
 
-.navbar a:hover {
+.navbar .nav > li > a {
+    color: white;
+}
+
+.navbar .nav > li > a:hover {
     color: white;
 }
 
